RESOLVED FIXED12331
REGRESSION(r18951): Selecting text in a textarea makes the page scroll
https://bugs.webkit.org/show_bug.cgi?id=12331
Summary REGRESSION(r18951): Selecting text in a textarea makes the page scroll
Daniele Metilli
Reported 2007-01-18 18:27:27 PST
After r18951 (the fix for "flashy" selection in textareas), if you select some text in a textarea the page scrolls up. You can try this here in Bugzilla: 1 - Scroll down (a scroll bar must appear in the window). 2 - Type something in the textarea and select it. 3 - The page scrolls up. I have found this bug using a trackpad, so I'm not sure it's the same with a mouse. If it's trackpad-specific, it may also be related to bug 10747.
Attachments
patch, no change log or layout test (can someone write a test?) (898 bytes, patch)
2007-01-21 18:03 PST, Darin Adler
mjs: review-
beginning of layout test (1.50 KB, text/html)
2007-01-24 13:53 PST, Adele Peterson
no flags
patch, this time with change log and layout test (28.06 KB, patch)
2007-01-24 20:48 PST, Darin Adler
adele: review+
Matt Lilek
Comment 1 2007-01-18 18:36:33 PST
Not trackpad specific, happens with my mouse too.
mitz
Comment 2 2007-01-20 22:32:59 PST
*** Bug 12348 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 3 2007-01-21 05:49:04 PST
Also happens in text fields.
Darin Adler
Comment 4 2007-01-21 18:03:57 PST
Created attachment 12591 [details] patch, no change log or layout test (can someone write a test?)
Mark Rowe (bdash)
Comment 5 2007-01-21 19:56:00 PST
Maciej Stachowiak
Comment 6 2007-01-22 18:58:21 PST
Comment on attachment 12591 [details] patch, no change log or layout test (can someone write a test?) r- for lack of test case. Probably possible to make one with eventSender.
Adele Peterson
Comment 7 2007-01-24 13:53:17 PST
Created attachment 12648 [details] beginning of layout test I started this layout test. But I just can't seem to trigger autoscroll with the eventSender.
Darin Adler
Comment 8 2007-01-24 20:48:11 PST
Created attachment 12658 [details] patch, this time with change log and layout test
Darin Adler
Comment 9 2007-01-24 21:04:42 PST
Committed revision 19102.
Note You need to log in before you can comment on or make changes to this bug.