LayoutTests:

Reviewed by Adele.

        - test for one of the symptoms of http://bugs.webkit.org/show_bug.cgi?id=12331
          REGRESSION(r18951): Selecting text in a textarea makes the page scroll

        * fast/events/autoscroll-expected.checksum: Added.
        * fast/events/autoscroll-expected.png: Added.
        * fast/events/autoscroll-expected.txt: Added.
        * fast/events/autoscroll.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12331
          REGRESSION(r18951): Selecting text in a textarea makes the page scroll

        Test: fast/events/autoscroll.html

        * rendering/RenderLayer.cpp: (WebCore::RenderLayer::autoscroll):
        Adjust position to be relative to the object's corner for the hit test, but not for the
        scrollRectToVisible call. The previous version accidentally re-used the version that was
        adjusted for the hit test.



Canonical link: https://commits.webkit.org/16067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19102 268f45cc-cd09-0410-ab3c-d52691b4dbfc